@@ -3,10 +3,14 @@ package xyz.bromine0x23.shiningco.services;
 import lombok.Setter;
 import net.mamoe.mirai.Bot;
 import net.mamoe.mirai.contact.Contact;
+import net.mamoe.mirai.contact.Group;
+import net.mamoe.mirai.contact.Member;
 import net.mamoe.mirai.contact.User;
+import net.mamoe.mirai.event.events.GroupMemberEvent;
 import net.mamoe.mirai.event.events.MessageEvent;
 import net.mamoe.mirai.message.data.MessageChainBuilder;
 import net.mamoe.mirai.message.data.OnlineMessageSource;
+import org.casbin.jcasbin.main.Enforcer;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextAware;
@@ -27,6 +31,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -40,6 +45,14 @@ public class PluginManageService implements InitializingBean, ApplicationContext
 
 	private List<RegisteredPlugin> plugins;
 
+	private final Enforcer enforcer;
+
+	public PluginManageService(
+		Enforcer enforcer
+	) {
+		this.enforcer = enforcer;
+	}
+
 	@Override
 	public void afterPropertiesSet() throws Exception {
 		this.plugins = registerPlugins(applicationContext);
@@ -47,6 +60,16 @@ public class PluginManageService implements InitializingBean, ApplicationContext
 
 	public List<RegisteredPlugin> getPlugins() {
 		return Collections.unmodifiableList(plugins);
+	}
+
+	public List<RegisteredPlugin> getPlugins(MessageEvent event) {
+		var sender  = event.getSender();
+		var subject = event.getSubject();
+
+		var requestSender  = toStringForEnforce(sender);
+		var requestSubject = toStringForEnforce(subject);
+
+		return plugins.stream().filter(plugin -> enforcer.enforce(requestSender, requestSubject, plugin.getId())).toList();
 	}
 
 	public Optional<RegisteredPlugin> getPlugin(String idOrName) {
@@ -58,7 +81,7 @@ public class PluginManageService implements InitializingBean, ApplicationContext
 	private static List<RegisteredPlugin> registerPlugins(ApplicationContext applicationContext) {
 		var beans = applicationContext.getBeansWithAnnotation(Plugin.class).values().stream()
 			.sorted(AnnotationAwareOrderComparator.INSTANCE)
-			.collect(Collectors.toList());
+			.toList();
 		var plugins = new ArrayList<RegisteredPlugin>();
 		for (var bean : beans) {
 			var annotation = AnnotatedElementUtils.findMergedAnnotation(bean.getClass(), Plugin.class);
@@ -85,7 +108,7 @@ public class PluginManageService implements InitializingBean, ApplicationContext
 			method -> {
 				var annotations = AnnotatedElementUtils.findMergedRepeatableAnnotations(method, PluginCommand.class);
 				for (var annotation : annotations) {
-					var parameters = method.getParameters();
+					var parameters     = method.getParameters();
 					var parameterTypes = new RegisteredPluginCommand.ParameterType[parameters.length];
 					for (int i = 0; i < parameters.length; ++i) {
 						parameterTypes[i] = resolvePluginCommandParameters(parameters[i]);
@@ -127,6 +150,16 @@ public class PluginManageService implements InitializingBean, ApplicationContext
 		}
 		var message = MessageFormat.format("不支持的参数类型: {0} ({1})", parameter.getType(), Arrays.toString(parameter.getAnnotations()));
 		throw new IllegalArgumentException(message);
+	}
+
+	private String toStringForEnforce(Contact contact) {
+		if (contact instanceof User user) {
+			return "/user/" + user.getId();
+		}
+		if (contact instanceof Group group) {
+			return "/group/" + group.getId();
+		}
+		return "/contact/" + contact.getId();
 	}
 
 }
